# osort

./: .merlin  README.md
.github/workflows/: blank.yml
_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/default/: README.md  osort.dune-package  osort.install  osort.ml  osort.opam
_build/default/.dune/: configurator
_build/default/.osort.eobjs/: osort.ml.d
_build/default/.osort.eobjs/byte/: dune__exe__Osort.cmi  dune__exe__Osort.cmo  dune__exe__Osort.cmt
_build/default/.osort.eobjs/native/: dune__exe__Osort.cmx
_build/install/default/lib/osort/: META  dune-package  opam
src/: dune
